--- a/src/Assets/main.css
+++ b/src/Assets/main.css
@@ -1,208 +1,165 @@
 * {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    overflow: hidden;
-  }
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background: #181818;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    height: 100vh;
-  }
-  img {
-    padding:0px;
-    margin:0px ;
-    max-width: 800px;
-    height:auto;
-    vertical-align: middle;
-    overflow: hidden;
-  }
-  a {
-    text-decoration: none;
-  }
-  .file-upload {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    padding: 1.5rem;
-    background-color: #222222;
-    -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    border-radius: 15px;
-    width:1000px;
-    height: 800px;
-    position: relative;
-  }
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+  background: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.header h2 {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+img {
+  padding: 0px;
+  margin: 0px;
+  max-width: 1000px;
+  height: auto;
+  vertical-align: middle;
+  overflow: hidden;
+}
+a {
+  text-decoration: none;
+}
+.file-upload {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  padding: 1.5rem;
+  border-radius: 15px;
+  width: 1900px;
+  height:900px;
+  position: relative;
+}
 
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 5px;
-}
-
-.reset {
-  background: none;
-  background-color:#ff1a1a98 ;
-  border: none;
-  border-radius: 5px;
   padding: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  cursor: pointer;
-  color: #ffffff;
 }
 
-.reset:hover {
-  background: none;
-  padding: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  cursor: pointer;
-  background-color: #ff1a1ad2;
-  color: #ffffff;
-  border-radius: 5px;
-  transition: 0.3s ease-in-out;
+.file-upload::after {
+  position: absolute;
+  font-size: 5rem;
+  top: -18%;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
-  .file-upload::after {
-    position: absolute;
-    font-size: 5rem;
-    top: -18%;
-    left: 0;
-    right: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-  }
-  
-  .file-upload h2 {
-    font-size: 1.5rem;
-    color: #ffffff;
-    position: relative;
-    padding-right: 1rem;
-    margin-bottom: 1rem;
-  }
-  .file-upload p {
-    font-size: 0.875rem;
-    color: #ffffff;
-    margin-bottom: 1rem;
-  }
-  .custom-form-group {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    margin-bottom: 0.875rem;
-  }
-  .custom-form-group input {
-    padding: 0.875rem 1rem;
-    border-radius: 10px;
-    border: 1px solid #ffffff;
-    color: #333;
-    outline: none;
-    -webkit-transition: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-    font-size: 0.875rem;
-  }
-  .custom-form-group input:focus {
-    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-  }
-  .custom-file-drop-area {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    border: 2px dashed #ffffff;
-    height: 100px;
-    border-radius: 10px;
-    cursor: -webkit-grab;
-    cursor: grab;
-  }
-  .custom-file-drop-area label {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    font-size: 1.2rem;
-    color: #ffffff;
-    text-transform: uppercase;
-    font-weight: bold;
-  }
-  .custom-file-drop-area input {
-    display: none;
-  }
-  .custom-file-drop-area.highlight {
-    border-color: #238def;
-  }
-  .custom-file-drop-area.highlight label {
-    color: #238def;
-  }
-  
+.file-upload h2 {
+  font-size: 1.5rem;
+  color: #005CE5;
+  position: relative;
+  padding-right: 1rem;
+  margin-bottom: 1rem;
+}
+
+
+.custom-file-drop-area {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-bottom: 2px solid black;
+  width: 200px;
+  height: 50px;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+.custom-file-drop-area label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  color: black;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.custom-file-drop-area input {
+  display: none;
+}
+
 .custom-file-preview {
-    margin-top: 1rem;
-    height: 450px;
-}   
+  margin-top: 1rem;
+}
 
 .custom-file-preview .prev-img {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-radius: 10px;
 }
 
 .palette-container {
   display: flex;
   width: 100%;
   height: 150px;
+  justify-content: center;
+  margin-top: 1rem;
 }
 
 .color-item {
-  background-color: #ffffff;
-  width: 100%;
-  height: 300px;
+  width: 170px;
+  margin-left: 1rem;
+}
+
+.color-label {
+  color: black;
+  font-size: 0.875rem;
+  font-size: 16px;
+  font-weight: 800;
+}
+
+.color-label-container {
+  width: 170px;
+  height: 20px;
+  background-color: white;
 }
