--- a/src/Assets/main.css
+++ b/src/Assets/main.css
@@ -1,3 +1,10 @@
+:root {
+  --main-bg-color: #0F0F10;
+  --main-text-color: white;
+  --secondary-bg-color: #28282a;
+  --blue:#73abff;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -9,16 +16,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Inter", sans-serif;
-  background: #ffffff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  background: var(--main-bg-color);
   height: 100vh;
 }
 
@@ -47,7 +45,6 @@ a {
   width: 1900px;
   max-width: 100%;
   height: 900px;
-  position: relative;
 }
 
 .header {
@@ -59,7 +56,7 @@ a {
 }
 
 .name {
-  color: #005ce5;
+  color: var(--blue);
   font-size: 2rem;
   font-weight: 800;
 }
@@ -90,12 +87,15 @@ a {
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
-  justify-content: center;
-  border-bottom: 2px solid black;
+  justify-content: space-between;
+  background-color: var(--secondary-bg-color);
+  border-radius: 10px;
   width: 200px;
   height: 50px;
   cursor: -webkit-grab;
   cursor: grab;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .custom-file-drop-area label {
@@ -109,7 +109,7 @@ a {
   -ms-flex-pack: center;
   justify-content: center;
   font-size: 1.2rem;
-  color: black;
+  color: var(--main-text-color);
   text-transform: uppercase;
   font-weight: bold;
 }
@@ -147,15 +147,29 @@ a {
 }
 
 .color-label {
-  color: black;
+  color: var(--main-text-color);
   font-size: 0.875rem;
   font-size: 16px;
   font-weight: 800;
 }
 
 .color-label-container {
+  display: flex;
+  justify-content: center;
   width: 170px;
   height: 20px;
-  background-color: white;
+  background-color: var(--main-bg-color);
   border: none;
+}
+
+.text-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.text-preview {
+  font-size: 45px;
+  color: var(--secondary-bg-color);
 }
