--- a/src/Assets/main.css
+++ b/src/Assets/main.css
@@ -1,8 +1,8 @@
 :root {
-  --main-bg-color: #0F0F10;
+  --main-bg-color: #0f0f10;
   --main-text-color: white;
   --secondary-bg-color: #28282a;
-  --blue:#73abff;
+  --blue: #73abff;
 }
 
 * {
@@ -24,7 +24,7 @@ img {
   padding: 0px;
   margin: 0px;
   width: 100%;
-  max-width: 1000px;
+  max-width: 800px;
   height: auto;
   vertical-align: middle;
   overflow: hidden;
@@ -118,7 +118,7 @@ a {
 }
 
 .custom-file-preview {
-  margin-top: 1rem;
+  margin-top: 5rem;
 }
 
 .custom-file-preview .prev-img {
@@ -172,4 +172,80 @@ a {
 .text-preview {
   font-size: 45px;
   color: var(--secondary-bg-color);
+}
+
+@media (max-width: 1160px) {
+  .color-item {
+    width: 150px;
+  }
+  .color-label-container {
+    width: 100%;
+    height: 20px;
+    background-color: var(--main-bg-color);
+    border: none;
+  }
+}
+
+@media (max-width: 880px) {
+  .color-item {
+    width: 100px;
+  }
+  .color-label-container {
+    width: 100px;
+    height: 20px;
+    background-color: var(--main-bg-color);
+    border: none;
+  }
+}
+
+@media (max-width: 650px) {
+  * {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    overflow: visible;
+  }
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: "Inter", sans-serif;
+    background: var(--main-bg-color);
+    height: 100%;
+    overflow: visible;
+  }
+  .custom-file-drop-area {
+    width: 100px;
+    height: 50px;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+  .custom-file-drop-area label {
+    font-size: 1rem;
+    color: var(--main-text-color);
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  .palette-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    justify-content: center;
+  }
+
+  .color-item {
+    width: 100%;
+    height: 100px;
+    margin-left: 0;
+  }
+  .color-label-container {
+    width: 100%;
+    height: 20px;
+    background-color: var(--main-bg-color);
+    border: none;
+  }
+  .text-preview {
+    font-size: 25px;
+  }
 }
